--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,16 @@
         }
     ],
     "require": {
-        
+        "symfony/console": "2.6.7",
+        "filp/whoops": "^2.14",
+        "vlucas/phpdotenv": "^5.4",
+        "usmanhalalit/pixie": "^2.0",
+        "miladrahimi/phprouter": "5.*",
+        "voku/pagination": "^4.0",
+        "rakit/validation": "^1.4",
+        "nesbot/carbon": "^2.57",
+        "delight-im/auth": "^8.3",
+        "phpmailer/phpmailer": "^6.6"
     },
     "repositories": [
         {
