--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "delight-im/auth": "^8.3",
         "phpmailer/phpmailer": "^6.6",
         "fzaninotto/faker": "^1.5",
-        "phelium/mysql-backup": "dev-master"
+        "phelium/mysql-backup": "^1.0"
     },
     "repositories": [
         {
