updated and fix bugs

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "nesbot/carbon": "^2.57",
         "delight-im/auth": "^8.3",
         "phpmailer/phpmailer": "^6.6",
-        "fzaninotto/faker": "^1.5"
+        "fzaninotto/faker": "^1.5",
+        "phelium/mysql-backup": "^1.0"
     },
     "repositories": [
         {
@@ -53,5 +54,8 @@
     },
     "require-dev": {
         "symfony/var-dumper": "*"
+    },
+    "config": {
+        "platform-check": false
     }
 }
