--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # SETTING PROJECT (TRUE is default)
 DEBUG="TRUE"
-
+# SET TRUE IF UPLOAD HOSTING (FALSE is default)
+RUN_SERVE="FALSE"
 # DATABASE
 DB_PORT="3306"
 DB_HOST="localhost"
